# QCalculator

./: .gitignore  CMakeLists.txt  logic.txt  main.cpp
.cache/clangd/index/: main.cpp.2C28ABC5078F07B0.idx
qml/: Main.qml
src/cpp/: My_Button.cpp  main.cpp
src/headers/: My_Button.h
